Front end updates

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -13,6 +13,15 @@
 </head>
 
 <body>
-<script src="src/javascript/Atm.js"></script>
+
+<form id="new-user-form">
+    <input type="text" name="name" id="input-box">
+    <input type="text" name="email" id="input-box">
+    <input type="text" name="password" id="input-box">
+    <input class="button-primary" type="button" value="submit" name="button" id="new-user-submit">
+</form>
+
+
+<script src="src/javascript/frontend/Main.js" type="module"></script>
 </body>
 </html>
