--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -3,7 +3,8 @@
 <form id="login-form">
     <input type="text" name="email" id="email-input">
     <input type="password" name="password" id="password-input">
-    <input type="button" value="login" name="button" id="login-submit">
+    <input type="button" value="login" name="button" id="login-button">
+    <input type="button" value="New User" name="button" id="newuser-button">
 </form>
 
 <script src="src/javascript/Login.js" type="module"></script>
