--- a/src/views/newuser.ejs
+++ b/src/views/newuser.ejs
@@ -1,10 +1,11 @@
 <%- include ('src/views/header.ejs'); -%>
 
+<p>Good news! If you sign up for an account today you will receive $100 for free</p>
 
 <form id="new-user-form">
-    <input type="text" name="name" id="name-input">
-    <input type="text" name="email" id="email-input">
-    <input type="text" name="password" id="password-input">
+    <input type="text" name="name" id="name-input" value="name">
+    <input type="text" name="email" id="email-input" value="email">
+    <input type="text" name="password" id="password-input" value="password">
     <input class="button-primary" type="button" value="submit" name="button" id="new-user-submit">
 </form>
 
