--- a/src/views/pages/login.ejs
+++ b/src/views/pages/login.ejs
@@ -1,6 +1,6 @@
-<%- include ('src/views/header.ejs'); -%>
-
-<link rel="stylesheet" href="src/css/login-styles.css">
+<%- include ('src/views/partials/header.ejs'); -%>
+<link rel="stylesheet" href="src/css/main-styles.css">
+<link rel="stylesheet" href="src/css/login-page-styles.css">
 
 </head>
 <body>
@@ -17,10 +17,9 @@
         <input type="button" value="New User" name="button" id="newuser-button">
     </form>
 
-    <p id="error-text">
-    </p>
+    <p id="error-text"></p>
 
 
 
-<script src="src/javascript/Login.js" type="module"></script>
-<%- include ('src/views/footer.ejs'); -%>
+<script src="src/javascript/pages/Login.js" type="module"></script>
+<%- include ('src/views/partials/footer.ejs'); -%>
