--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -3,8 +3,9 @@
 <head>
     <meta charset="utf-8">
 
-    <title>PWA ATM</title>
+    <title>Mr.Big's Bank</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="PWA ATM App">
+    <meta name="description" content="PWA Bank App">
     <link rel="shortcut icon" href="/src/images/favicon.ico"/>
+
