--- a/src/css/deposit-page-styles.css
+++ b/src/css/deposit-page-styles.css
@@ -1,5 +1,41 @@
 #main-display-bar {
     display:grid;
-    grid-template-rows: 3em 1fr 3em 1fr 3em 1fr;
+    grid-template-rows: 1fr auto;
+    grid-template-columns: auto auto auto;
     padding: 10px;
+}
+
+#video {
+    display: block;
+    background-color: gray;
+    margin: auto;
+    border-radius: 10px;
+    grid-column: 1/-1;
+    width: 100%;
+    height: 90%;
+}
+
+.image-button {
+    grid-row: 2;
+    margin-top: 1vh;
+    height: 6vh;
+    border-radius: 10px;
+}
+
+
+#video-canvas {
+    display: none;
+    margin: auto;
+    border-radius: 10px;
+    grid-column: 1/-1;
+    width: 100%;
+    height: 90%;
+}
+
+#image-sent {
+    margin: auto;
+    text-align: center;
+    grid-column: 1/-1;
+    grid-row: 1/-1;
+    font-size: 2.5em;
 }
