--- a/src/views/pages/home.ejs
+++ b/src/views/pages/home.ejs
@@ -1,6 +1,6 @@
 <%- include ('src/views/partials/header.ejs'); -%>
 
-<link rel="stylesheet" href="src/css/home-page-styles.css">
+<link rel="stylesheet" href="src/css/home-styles.css">
 
 </head>
 <body>
