--- a/src/views/pages/login.ejs
+++ b/src/views/pages/login.ejs
@@ -1,6 +1,6 @@
 <%- include ('src/views/partials/header.ejs'); -%>
 <link rel="stylesheet" href="src/css/main-styles.css">
-<link rel="stylesheet" href="src/css/login-page-styles.css">
+<link rel="stylesheet" href="src/css/login-styles.css">
 
 </head>
 <body>
