--- a/src/views/pages/newuser.ejs
+++ b/src/views/pages/newuser.ejs
@@ -1,6 +1,6 @@
 <%- include ('src/views/partials/header.ejs'); -%>
 <link rel="stylesheet" href="src/css/main-styles.css">
-<link rel="stylesheet" href="src/css/newuser-page-styles.css">
+<link rel="stylesheet" href="src/css/newuser-styles.css">
 
 </head>
 <body>
@@ -18,7 +18,7 @@
 
     <section id="messages">
         <p id="sign-up-text">Good news! If you sign up for an account today you will receive $100 for free</p>
-        <p id="error-text"></p>
+        <p id="message-text"></p>
     </section>
 
 
