--- a/src/css/newuser-styles.css
+++ b/src/css/newuser-styles.css
@@ -1,3 +1,5 @@
+/** CSS styles for the newuser page **/
+
 form {
     margin: 0;
     align-self: center;
@@ -10,4 +12,8 @@ form {
 #sign-up-text {
     text-align: center;
     margin: 1em;
+}
+
+#message-text {
+    text-align: center;
 }
