--- a/src/views/pages/transfer.ejs
+++ b/src/views/pages/transfer.ejs
@@ -1,7 +1,7 @@
 <%- include ('src/views/partials/header.ejs'); -%>
 
-<link rel="stylesheet" href="src/css/home-page-styles.css">
-<link rel="stylesheet" href="src/css/transfer-page-styles.css">
+<link rel="stylesheet" href="src/css/home-styles.css">
+<link rel="stylesheet" href="src/css/transfer-styles.css">
 
 </head>
 <body>
