--- a/src/css/login-styles.css
+++ b/src/css/login-styles.css
@@ -6,8 +6,9 @@ form {
     justify-self: center;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
 }
+
 
 
 
