--- a/src/views/pages/transfer.ejs
+++ b/src/views/pages/transfer.ejs
@@ -12,16 +12,16 @@
         <h1>Transfer</h1>
 
         <form id="transfer-form">
-            <p class="account-name">From Account:</p>
+            <label for="from-account" class="account-name">From Account:</label>
             <select name="transfer-from-account" id="from-account">
                 <option id="savings-drop-down">Savings 1001 - 100.00</option>
                 <option id="checking-drop-down">Checking 1002 - 0.00</option>
                 <option id="credit-drop-down">Credit 1003 - 0.00</option>
             </select>
-            <p class="account-name">To Account:</p>
-            <input type="text" name="transfer-to-account" id="transfer-to" placeholder="Ex: 1001">
-            <p class="amount-text">Transfer Amount:</p>
-            <input type="text" name="transfer-amount" id="transfer-amount">
+            <label for="transfer-to" class="account-name">To Account:</label>
+            <input type="number" name="transfer-to-account" id="transfer-to" placeholder="Ex: 1001">
+            <label for="transfer-amount" class="amount-text">Transfer Amount:</label>
+            <input type="number" min="0.01" placeholder="1.00" name="transfer-amount" id="transfer-amount">
             <input class="button-primary" type="button" value="Transfer" name="button" id="transfer-submit">
             <p id="message-text"></p>
         </form>
@@ -30,7 +30,7 @@
 
     <%- include ('src/views/partials/bottom-menu-bar.ejs'); -%>
 
-    <script src="src/javascript/pages/Transfer.js" type="module"></script>
     <script src="src/javascript/AppScripts.js" type="module"></script>
+    <script src="src/javascript/pages/Transfer.js" type="module"></script>
 
 <%- include ('src/views/partials/footer.ejs'); -%>
