--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -8,4 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="PWA Bank App">
     <link rel="shortcut icon" href="/src/images/favicon.ico"/>
+    <link rel="manifest" href="/manifest.json">
+    <meta name="mobile-web-app-capable" content="yes" />
+    <link rel="apple-touch-icon" href="/src/images/152-bitcoin.png">
+    <meta name="theme-color" content="#4682b4" />
 
+    <script src="/src/javascript/Main.js" type="module"></script>
