--- a/src/css/deposit-styles.css
+++ b/src/css/deposit-styles.css
@@ -2,7 +2,7 @@
 
 #main-display-bar {
     display:grid;
-    grid-template-rows: 1fr auto;
+    grid-template-rows: auto 1fr;
     grid-template-columns: auto auto auto;
     padding: 10px;
 }
@@ -18,7 +18,7 @@
 }
 
 .image-button {
-    grid-row: 2;
+    grid-row: 1;
     margin-top: 1vh;
     height: 6vh;
     border-radius: 10px;
@@ -34,7 +34,7 @@
     height: 90%;
 }
 
-#image-sent {
+#message-text {
     margin: auto;
     text-align: center;
     grid-column: 1/-1;
