--- a/src/css/transfer-styles.css
+++ b/src/css/transfer-styles.css
@@ -25,4 +25,12 @@
     text-align: center;
 }
 
+label {
+    display: block;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+}
+
 
